--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html1>
+cd Senoruwu.github.io
+echo "Primer sitioweb" > index.html
 <html lang="es">
     <Head>
         <meta charset="uft-8"/>
